--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
     "react-native-camera": "^0.10.0",
+    "react-native-tesseract-ocr": "^1.0.8",
     "react-navigation": "^1.0.0-beta.11"
   }
 }
